[tool.poetry]
name = "udtee"
version = "0.1.0"
description = ""
authors = ["Brian Pitts <brian@polibyte.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
pre-commit = "^2.7.1"

[tool.poetry.scripts]
udtee = 'udtee.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
